--- a/ThienNga2/Content/agency.css
+++ b/ThienNga2/Content/agency.css
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 body {
-  background: url("images/flying-drones.jpg")  no-repeat center center fixed;
+  background: url("")  no-repeat center center fixed;
   
 
   background-size: cover;
