--- a/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
+++ b/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
@@ -88,6 +88,12 @@
                 item it = lst.ElementAt(0);
                 <table class="responstable">
                     <tr>
+                        <td>SKU: @it.tb_product_detail.productStoreID</td>
+                    </tr>
+                    <tr>
+                        <td> Mã BH từ bill : @it.productID</td>
+                    </tr>
+                    <tr>
                         <td>Tên sản phẩm : @it.tb_product_detail.productName</td>
                     </tr>
                     <tr>
