--- a/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
+++ b/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
@@ -198,7 +198,7 @@
                 <table class="responstable">
                     <tr>
                          <th> SKU </th>
-                        <th> Mã bill </th>
+                        <th> Mã báo giá </th>
                         <th> Tên sản phẩm </th>
                         <th> Tên Khách </th>
                         <th> SDT</th>
