--- a/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
+++ b/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
@@ -110,7 +110,7 @@
                 <table class="responstable">
                     <tr>
                         <th>
-                            Mã bảo hành
+                            IMEI bảo hành
                         </th>
                         <th>
                             Ngày kích hoạt
@@ -227,9 +227,7 @@
                             <td>
                                 @i.tb_customer.phonenumber
                             </td>
-                            <td>
-                                @i.DateOfSold
-                            </td>
+                  
                             <td>
                            @using (Html.BeginForm("Search", "KickHoatBaoHanh"))
                            {
