--- a/ThienNga2/Views/CreateWarranty/ConfirmCreate.cshtml
+++ b/ThienNga2/Views/CreateWarranty/ConfirmCreate.cshtml
@@ -18,7 +18,7 @@
             
        
        <div>
-          <h1> Xác nhận thông tin code bảo hành : @act.CodeBaoHanh </h1>
+          <h1> Biên nhận bảo hành : @act.CodeBaoHanh </h1>
                 <table class="responstable">
             <tr>
                 <td>
