--- a/ThienNga2/Views/Warranty/WarrantyCheck.cshtml
+++ b/ThienNga2/Views/Warranty/WarrantyCheck.cshtml
@@ -225,7 +225,7 @@
 
 
                     }
-                    <h3> Linh kiện thay thế</h3>
+                    <h3> Linh kiện thay mới</h3>
                     <table id="fee" class="responstable">
                         <th> Tên Linh Kiện </th>
                         <th> Số lượng</th>
@@ -281,7 +281,7 @@
 
                     </table>
 
-                    <h3> Thông tin sửa chữa</h3>
+                    <h3>Sửa chữa khác</h3>
                     <table class="responstable">
                         <th> Mô tả </th>
                         <th>  Tiền công</th>
