--- a/ThienNga2/Views/Shared/_Layout.cshtml
+++ b/ThienNga2/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
                     <li style="background-color:#022F5A"> @Html.ActionLink("Kiểm hàng tồn kho", "", "Inventory")</li>}
                     else
                     {
-                        <li > @Html.ActionLink("Kiểm hàng tồn kho", "", "Inventory")</li> }
+                        <li > @Html.ActionLink("Kiểm kho", "", "Inventory")</li> }
                     @*@if (Request.RawUrl.Contains("themkho") )
                     {
                         <li style="background-color:#022F5A"> @Html.ActionLink("Nhập kho", "", "Inventory/themkho")</li>}
