--- a/ThienNga2/Content/bootstrap.css
+++ b/ThienNga2/Content/bootstrap.css
@@ -1100,6 +1100,7 @@ textarea {
   line-height: inherit;
 }
 a {
+  font-size:12px;
   color: #2fa4e7;
   text-decoration: none;
 }
@@ -4172,8 +4173,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar {
   position: relative;
   min-height: 50px;
+  max-height: 100px;
   margin-bottom: 20px;
   border: 1px solid transparent;
+  white-space: nowrap;
 }
 @media (min-width: 768px) {
   .navbar {
@@ -4222,12 +4225,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-fixed-top .navbar-collapse,
 .navbar-fixed-bottom .navbar-collapse {
-  max-height: 340px;
+  max-height: 50px;
 }
 @media (max-device-width: 480px) and (orientation: landscape) {
   .navbar-fixed-top .navbar-collapse,
   .navbar-fixed-bottom .navbar-collapse {
-    max-height: 200px;
+    max-height: 50px;
   }
 }
 .container > .navbar-header,
@@ -4280,7 +4283,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-brand {
   float: left;
   padding: 15px 15px;
-  font-size: 18px;
+  font-size: 15px;
   line-height: 20px;
   height: 50px;
 }
@@ -4781,7 +4784,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination-lg > li > a,
 .pagination-lg > li > span {
   padding: 14px 16px;
-  font-size: 18px;
+  font-size: 15px;
   line-height: 1.3333333;
 }
 .pagination-lg > li:first-child > a,
