--- a/ThienNga2/Views/ProductItem/ConfirmNewProductItem.cshtml
+++ b/ThienNga2/Views/ProductItem/ConfirmNewProductItem.cshtml
@@ -11,104 +11,93 @@
     <link rel="stylesheet" href="~/Content/jquery-ui.css" type="text/css">
 </head>
 <body>
-    @if (ViewData["tuple"] != null)
+    <h1>Phiếu báo giá</h1>
+    @if ((NewItemViewModel)TempData["tuple"] != null)
     {
-        NewItemViewModel act = (NewItemViewModel)ViewData["tuple"];
-        double pricetotal = 0;
-
-        <div>
-            <h1> Xác nhận thông tin bán hàng  </h1>
-            <table class="responstable">
-                <tr>
-                    <td>
-                        SDT khách hàng
-                    </td>
-                    <td>
-                        @act.phoneNumber
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Tên
-                    </td>
-                    <td>
-                        @act.cusName
-                    </td>
-                </tr>
-                </table>
-               @if (ViewData["ConfirmItemViewList"] != null)
-               { List<ConfirmItemView> lst = (List<ConfirmItemView>)ViewData["ConfirmItemViewList"];
-                   foreach (ConfirmItemView viewitem in lst)
-                   {
-                       pricetotal = viewitem.price + pricetotal;
-                <table class="responstable">
-               
-                    
-                    <tr>
-                        <td>
-                            Tên sản phẩm
-                        </td>
-                        <td>
-                            @viewitem.itemName
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Số lượngn
-                        </td>
-                        <td>
-                            @viewitem.quantity
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Giaá
-                        </td>
-                        <td>
-                          
-                            @viewitem.price
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Các code để nhập bảo hành (hãy lưu lại)
-                        </td>
-                        <td>
-                            @foreach (String t in viewitem.lst )
-                            {
-                                @t  <br />
-                            }
-                        </td>
-                    </tr>
-                </table>
-                   }
-               }
-                <table class="responstable">
-                    <tr>
-                        <td>
-                            @using (Html.BeginForm("Delete", "ProductItem"))
-                            {
-                                String deleteID = (String) ViewData["todelete"];
+    NewItemViewModel a = (NewItemViewModel)TempData["tuple"];
 
 
-                              <input type="hidden" value="@deleteID" name="todelete" />
-                                <button type="submit" name="Edit" value="Sửa"> Xóa </button>
-                            }
-                        </td>
-                        <td>
-                            @using (Html.BeginForm("Confirm", "ProductItem"))
-                            {
-
-                                <button type="submit" name="Edit" value="Hoàn tất">Hoàn tất</button>
-                            }
-                        </td>
+   
+    <table class="responstable">
 
 
-                    </tr>
+        <tr> <td> Tên Khách </td><td>  @a.cusName </td></tr>
+        <tr> <td>Sdt</td><td> @a.phoneNumber </td></tr>
+        <tr>
+            <th>
+                Mã unit
+            </th>
+            <th>
+                Tên sản phẩm
+            </th>
+            <th>
+                Số lượng
+            </th>
+            <th>
+                Đơn giá trên 1 sản phẩm
+            </th>
+         
+            <th>
+                Chiết Khấu phần trăm
+            </th>
+            <th>
+                Chiết Khấu trực tiếp
+            </th>
+            <th>
+                Thành tiền
+            </th>
+        </tr>
+        @for (int i = 0 ; i < a.items.Count; i ++)
+        {
+            AnOrderDetail ao = a.items[i];
+            if (ao.quantity > 0)
+            {
 
-                </table>
-        </div>
-    }
+                float thanhtien = (ao.thanhTien);
+                Convert.ToDecimal(thanhtien).ToString("#,##0.00");
+                float dongia = (ao.thanhTien / ao.quantity);
+                Convert.ToDecimal(dongia).ToString("#,##0.00");
+                float chietkhautt =( (ao.chietKhauTrucTiep));
+                Convert.ToDecimal(chietkhautt).ToString("#,##0.00");
+
+            <tr>
+                <td> @ao.productID</td>
+                <td> @ao.productName</td>
+                <td> @ao.quantity</td>
+                <td> @ao.DonGiaS </td>
+                <td> @(ao.chietKhauPhanTram + "")</td>
+                <td> <font size="2"> @ao.chietKhauTrucTiepS</font></td>
+                <td> <font size="2"> @ao.thanhTienS</font></td>
+            </tr>
+            }
+        }
+        </table>
+        <table class="responstable">
+            <tr>
+                <td>
+                    @using (Html.BeginForm("Delete", "ProductItem"))
+                    {
+                        String deleteID = (String)ViewData["todelete"];
+
+
+                        <input type="hidden" value="@deleteID" name="todelete" />
+                        <button type="submit" name="Edit" value="Sửa"> Xóa </button>
+                    }
+                </td>
+                <td>
+                    @using (Html.BeginForm("Confirm", "ProductItem"))
+                    {
+
+                        <button type="submit" name="Edit" value="Hoàn tất">Hoàn tất</button>
+                    }
+                </td>
+
+
+            </tr>
+
+        </table>
+  
+        }
 
 </body>
 </html>
