--- a/ThienNga2/Views/ProductItem/NewProductItem.cshtml
+++ b/ThienNga2/Views/ProductItem/NewProductItem.cshtml
@@ -56,7 +56,8 @@
             var CKTT = $('#items_' + (index - 1) + '__chietKhauTrucTiep').val();
             var CKPT = $('#items_' + (index - 1) + '__chietKhauPhanTram').val();
             var temp3 = temp * quantity * (100 - CKPT)/100 - CKTT;
-            $('#items_' + (index - 1) + '__thanhTien').val(numberWithCommas(temp3));
+            $('#items_' + (index - 1) + '__thanhTienS').val(numberWithCommas(temp3));
+            $('#items_' + (index - 1) + '__thanhTien').val(temp3);
         }
         function checkPrice(name, index) {
             var flag = false;
@@ -151,7 +152,7 @@
                                 </td>
                                 <td>
                         
-                                    <label>Thành tiền @Html.TextBoxFor(Model => Model.items[i].thanhTien, new { @class = "form-control", value = "0"})</label>
+                                    <label>Thành tiền @Html.TextBoxFor(Model => Model.items[i].thanhTienS, new { @class = "form-control", value = "0"})</label>
                                 </td>
                                 <td>
                                 
@@ -161,8 +162,8 @@
                               
                                     <label>Chiết khấu trực tiếp @Html.TextBoxFor(Model => Model.items[i].chietKhauTrucTiep, new { @class = "form-control", value = "0" , @type = "number" })</label>
                                 </td>
+                                @Html.HiddenFor(Model => Model.items[i].thanhTien, new { @class = "form-control", value = "0" })
                                
-                            
                                
                             </tr>
 
