--- a/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
+++ b/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
@@ -227,7 +227,9 @@
                             <td>
                                 @i.tb_customer.phonenumber
                             </td>
-                  
+                            <td>
+                                @i.DateOfSold
+                            </td>
                             <td>
                            @using (Html.BeginForm("Search", "KickHoatBaoHanh"))
                            {
