--- a/ThienNga2/Views/ProductItem/NewProductItem.cshtml
+++ b/ThienNga2/Views/ProductItem/NewProductItem.cshtml
@@ -122,7 +122,7 @@
             <h1>Tạo đơn hàng<span>Bán hàng</span></h1>
             @Html.ValidationSummary("", new { @class = "text-danger" })
             <form>
-                @*<label>Ngày/tháng/năm @Html.TextBoxFor(Model => Model. , new { @class = "form-control" }) </label>*@
+                <label>Ngày/tháng/năm @Html.TextBoxFor(Model => Model.soldDay , new { @class = "form-control",@Value=DateTime.Now }) </label>
                 <div class="section"><span>1</span>Thông tin khách hàng</div>
                 <div class="inner-wrap">
                     <label>Tên khách hàng @Html.TextBoxFor(Model => Model.cusName, new { @class = "form-control" })</label>
