--- a/ThienNga2/Views/CreateWarranty/ConfirmCreate.cshtml
+++ b/ThienNga2/Views/CreateWarranty/ConfirmCreate.cshtml
@@ -22,7 +22,7 @@
                 <table class="responstable">
             <tr>
                 <td>
-                    SDT khách hàng @act.id
+                    SDT khách hàng 
                 </td>
                 <td>
                     @act.SDT
@@ -77,7 +77,7 @@
                             }
                         </td>
                         <td>
-                            @using (Html.BeginForm("Confirm", "CreateWarranty"))
+                            @using (Html.BeginForm("Confirrm", "CreateWarranty"))
                             {
                                 <input type="hidden" value="@act.id" name="actid" />
                                 <button type="submit" name="Edit" value="Hoàn tất" > Hoàn tất</button>
